<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fragment_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/car_number"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/et_car_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_white"
            android:drawableRight="@drawable/big_downhead"
            android:singleLine="true"
            android:clickable="true"
            android:hint="@string/fill_in_car_address"
            android:padding="12dp"
            android:textSize="16sp"/>

        <include layout="@layout/common_view_line"></include>

        <EditText
            android:id="@+id/et_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_white"
            android:singleLine="true"
            android:hint="@string/Fill_in_car_number"
            android:maxLength="5"
            android:padding="12dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/car_brand"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_car_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_white"
            android:singleLine="true"
            android:hint="@string/fill_in_car_brand"
            android:padding="12dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/car_sfzid"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_car_sfzid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_white"
            android:singleLine="true"
            android:hint="@string/fill_in_car_sfzid"
            android:padding="12dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_confirm"
            style="@style/Common_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/confirm"/>

    </LinearLayout>
</ScrollView>